tests/html_macro/prop-attr-fail.stderr
error: only the `#[cfg]` attribute is permitted on props
 --> tests/html_macro/prop-attr-fail.rs:5:13
  |
5 |             #[foo(bar)]
  |             ^^^^^^^^^^^
