tests/html_macro/prop-attr-fail.rs
fn main() {
    ::yew_html_ext::html! {
        <div
            y=69
            #[foo(bar)]
            x=420
        />
    };
}
